# pytubepp

./: .gitignore  LICENCE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  release.yml
pytubepp/: config.py  download.py  main.py  postinstaller.py  postprocess.py  utils.py  video.py
